# ficapi

./: .clang-format  CMakeLists.txt  README.md
include/ficapi/: c++_api.hpp  c_api.hpp  ficapi.hpp
source/: c++_api.cpp  c_api.cpp
